# API

./: .dockerignore  .env.example  .env.production.example  .gitignore  Cargo.toml  Dockerfile  Makefile  PASSWORD_RESET.md  README.md  Secrets.toml  Secrets.toml.example  compose.dev.yaml  compose.prod.yaml  compose.test.yaml  prometheus.yml
.shuttle/: config.toml
crates/mms-api/: Cargo.toml  README.md
crates/mms-api/src/: config.rs  error.rs  jobs.rs  lib.rs  metrics.rs  normalization.rs  router.rs  state.rs  tracing.rs  validation.rs
crates/mms-api/src/auth/: README.md  cookies.rs  jwt.rs  middleware.rs  mod.rs  models.rs  refresh_token.rs  routes.rs  service.rs  validation.rs
crates/mms-api/src/auth/google/: client.rs  mod.rs  routes.rs  service.rs
crates/mms-api/src/deck/: mod.rs  model.rs  routes.rs
crates/mms-api/src/flashcard/: routes.rs
crates/mms-api/src/middleware/: cors.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/mms-api/src/practice/: routes.rs
crates/mms-api/src/roadmap/: routes.rs
crates/mms-api/src/topic/: model.rs  routes.rs
crates/mms-api/src/user/: README.md  email.rs  email_verification.rs  mod.rs  model.rs  password_reset.rs  routes.rs  token.rs
crates/mms-api/src/v1/: mod.rs
crates/mms-api/tests/: README.md  auth_tests.rs  email_verification_tests.rs  integration.rs  load_tests.rs  password_reset_tests.rs  rate_limit_tests.rs  refresh_token_tests.rs  roadmap_deck_practice_tests.rs  security_tests.rs  user_tests.rs
crates/mms-api/tests/common/: mod.rs
crates/mms-db/: Cargo.toml  DB_MODEL.md  OPTIMIZATION.md  README.md
crates/mms-db/migrations/: 0001_init.sql  0002_add_profile_picture.sql  0003_password_reset_tokens.sql  0004_email_verification.sql  0005_refresh_tokens.sql  0006_performance_and_cleanup_improvements.sql  0007_add_language_preferences.sql  0008_add_progress_percentage.sql  0009_streak_calculation.sql  0010_parameterize_mastery_threshold.sql  0011_updated_at_trigger.sql  0012_drop_cards_due_today.sql  README.md
crates/mms-db/rollback/: 0001_init_down.sql  0002_add_profile_picture_down.sql  0003_password_reset_tokens_down.sql  0004_email_verification_down.sql  0005_refresh_tokens_down.sql  0006_performance_and_cleanup_improvements_down.sql  README.md
crates/mms-db/sql/: cleanup_seed_data.sql  schema.sql  seed_fake_data.sql
crates/mms-db/src/: lib.rs  models.rs  schema.rs  schema.sql
crates/mms-db/src/repositories/: auth.rs  deck.rs  mod.rs  practice.rs  roadmap.rs  token.rs  user.rs
crates/mms-srs/: Cargo.toml  README.md
crates/mms-srs/src/: lib.rs
scripts/: backup.sh  deploy.sh  restore.sh
