[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
description = "API for memory cards"
homepage = ""
readme = "./README.md"
exclude = [".github/"]
license = "MIT"
repository = "https://github.com/Remsko/MemoryCards-serv.git"

[workspace]
members = [
    # Binaries
    "bin/serv",
    # Crates
    "crates/mms-*",
]
resolver = "3"

[workspace.dependencies]
mms-api = { path = "crates/mms-api" }
