[package]
name = "mms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
mms-db.workspace = true

serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
axum.workspace = true
axum-extra.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
oauth2.workspace = true
time.workspace = true
chrono.workspace = true
sqlx.workspace = true
bcrypt.workspace = true
uuid.workspace = true
anyhow.workspace = true
