[package]
name = "mms-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

autotests = false

[features]
shuttle = ["dep:shuttle-runtime"]

[dependencies]
mms-db.workspace = true

serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tokio.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
oauth2.workspace = true
time.workspace = true
chrono.workspace = true
sqlx.workspace = true
bcrypt.workspace = true
uuid.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
envy.workspace = true
lettre.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
regex.workspace = true

# Optional dependencies for Shuttle.rs deployment
shuttle-runtime = { workspace = true, optional = true }

[dev-dependencies]
tower.workspace = true
tokio.workspace = true

http-body-util = "0.1"
cookie = { version = "0.18", features = ["private"] }

# Single integration test that includes all test modules
[[test]]
name = "integration"
path = "tests/integration.rs"
